<resources>
    <string name="app_name">MyMapApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="none">None</string>
    <string name="terrain">Terrain</string>
    <string name="search">Search</string>

    <string name="unknown_geofence_transition">Unknown geofence transition</string>
    <string name="geofence_transition_entered">Geofence transition entered</string>
    <string name="geofence_transition_exited">Geofence transition exited</string>

    <string name="channel_name">NOTIFICATION_CHANNEL_256</string>
    <string name="description_text">Default notification channel</string>
</resources>
