<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MapsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_transparent_rectangle"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_rounded_black_rectangle"
        android:onClick="clickSearch"
        map:layout_constraintTop_toTopOf="@id/searchET"
        map:layout_constraintBottom_toBottomOf="@id/searchET"
        map:layout_constraintEnd_toEndOf="@id/searchET" />

    <RadioGroup
        android:id="@+id/mapTypes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        map:layout_constraintTop_toBottomOf="@id/searchET"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintBottom_toBottomOf="parent" >

        <RadioButton
            android:id="@+id/noneMap"
            android:text="@string/none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/normalMap"
            android:text="@string/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/satelliteMap"
            android:text="@string/satellite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/terrainMap"
            android:text="@string/terrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/hybridMap"
            android:text="@string/hybrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/locationBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:onClick="onLocationFABClick"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        map:srcCompat="@drawable/ic_my_location_24dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/directionsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="26dp"
        android:background="@null"
        android:visibility="gone"
        android:onClick="onDirectionsClick"
        map:srcCompat="@drawable/ic_directions_black_24dp"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
